# Proyecto-3---CG

OpenGLTest_CH1/: CMakeLists.txt  camera.h  camera1.h  main1.cpp
OpenGLTest_CH1/E5-Curvas/: 2.2.basic_lighting.fs  2.2.basic_lighting.vs  BoundingVolume.h  Objeto.h  glut_ply.h  main.cpp  shader_m.h  vertices.csv  vertices_100.csv  vertices_30.csv  vertices_40.csv  vertices_50.csv  vertices_60.csv
OpenGLTest_CH1/Sombras/: 3.1.2.shadow_mapping_depth.fs  model.h  shader.h  shadow_mapping_base.cpp
OpenGLTest_CH1/include/: glad.c
OpenGLTest_CH1/include/glad/: glad.h
OpenGLTest_CH1/shader/: 2.1.basic_lighting.fs  5.1.transform.fs  5.2.transform.vs  BoundingVolume.h  Objeto.cpp  Objeto.h  basic_lighting_diffuse.cpp  glut_ply.cpp  glut_ply.h  hello_triangle.cpp  hello_triangle_indexed.cpp  main.cpp  shader_m.h  shader_s.h  shaders_class.cpp  transformation.cpp  transformations.cpp  transformations2.cpp
